@@ -15,6 +15,7 @@ documents those changes that are of interest to users and admins.
  -- Add sinfo output format option "%C" for CPUs (active/idle/other/total).
     Based upon work by Anne-Marie Wunderlin (BULL).
  -- Assorted multi-core bug fixes (patch1.2.0-pre7.061128.mcorefixes).
+ -- Report SelectTypeParameters from "scontrol show config".
 
 * Changes in SLURM 1.2.0-pre7
 =============================
